--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "formik": "^2.4.6",
     "modern-normalize": "^2.0.0",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
